# C14H22O-bot

./: .gitignore  C14H22O-bot.service  README.md  bot.py  pyproject.toml
src/plugins/about/: __init__.py  config.py
src/plugins/homo_number/: __init__.py
src/plugins/links/: __init__.py  config.py  utils.py
src/plugins/loong/: __init__.py  config.py  model.py
src/plugins/tools/: __init__.py  config.py
